notes apis updated